--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
         --> 
         <div class="event-info-container">
             <h2 id="event-info">About the Event</h2>
-            <iframe width="360" src="https://www.youtube.com/embed/ZWdG7k8d2l0?si=7y-WJmPahxNcdxs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/ZWdG7k8d2l0?si=7y-WJmPahxNcdxs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
             <p class="event-description">The Toon Sportsfest aims to provide a fun and 
                 enthralling experience for people who are fan 
                 of cartoons. We aim allow people a chance to watch 
