Adding dark mode and style adjustments

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a href="#event-info">Event Information</a></li>
                 <li><a href="#event-schedule">Schedule</a></li>
                 <li><a href="#links">Links </a></li>
+                <li><button id="theme-button">Toggle Dark Mode</button> </li>
             </ul>
         </div>
 
@@ -89,7 +90,7 @@
         <div class="event-info-container">
             <h2 id="event-info">About the Event</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/ZWdG7k8d2l0?si=7y-WJmPahxNcdxs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="240" height="135" src="https://www.youtube.com/embed/ZWdG7k8d2l0?si=7y-WJmPahxNcdxs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <p class="event-description">The Toon Sportsfest aims to provide a fun and 
@@ -190,6 +191,7 @@
         </div> 
         
         <!-- script [PLACEHOLDER] [ADDED IN UNIT 5] -->
+         <script src="index.js"></script>
 
     </body>
 </html>
